fparser3.py
#!/usr/bin/env python3
"""
Flux Parser (fparser3.py) - FIXED VERSION 
Fixed template call vs template type declaration detection in is_likely_variable_declaration
"""

from fast3 import *
from flexer3 import Lexer, Token
from typing import List, Optional, Union, Any


class ParseError(Exception):
    """Parser exception for syntax errors"""
    def __init__(self, message: str, line: int = 0, col: int = 0):
        self.message = message
        self.line = line
        self.col = col
        super().__init__(f"Parse error at {line}:{col}: {message}")


class Parser:
    """Recursive descent parser for Flux"""
    
    def __init__(self, tokens: List[str], token_positions: List[tuple] = None):
        self.tokens = tokens
        self.current = 0
        self.current_token = self.tokens[0] if tokens else None
        self.token_positions = token_positions or [(1, 1)] * len(tokens)  # (line, col) for each token
        self.source_code = ""
        self.lexer = None
        self.literal_values = {}  # Store actual literal values by position
        self.in_lookahead = False  # Flag to prevent token stream modifications during lookahead
    
    def advance(self) -> str:
        """Move to the next token"""
        if self.current < len(self.tokens) - 1:
            self.current += 1
            self.current_token = self.tokens[self.current]
        return self.current_token
    
    def get_current_position(self):
        """Get the current line and column for the current token"""
        if self.current < len(self.token_positions):
            return self.token_positions[self.current]
        return (1, 1)
    
    @property
    def line(self) -> int:
        """Get current line number"""
        line, _ = self.get_current_position()
        return line
    
    @property 
    def col(self) -> int:
        """Get current column number"""
        _, col = self.get_current_position()
        return col
    
    def error(self, message: str):
        """Raise a parse error with proper position information"""
        line, col = self.get_current_position()
        raise ParseError(message, line, col)
    
    def peek(self, offset: int = 1) -> Optional[str]:
        """Look ahead at the next token without advancing"""
        peek_pos = self.current + offset
        if peek_pos < len(self.tokens):
            return self.tokens[peek_pos]
        return None
    
    def split_rshift_if_needed(self) -> bool:
        """Split RSHIFT into two GT tokens if current token is RSHIFT. Returns True if split occurred."""
        if self.current_token == "RSHIFT" and not self.in_lookahead:
            # Split RSHIFT into two GT tokens
            self.tokens[self.current] = "GT"
            self.tokens.insert(self.current + 1, "GT")
            # Adjust token positions if available
            if self.current < len(self.token_positions):
                current_pos = self.token_positions[self.current]
                self.token_positions.insert(self.current + 1, current_pos)
            self.current_token = "GT"
            return True
        return False
    
    def match(self, *expected_tokens: str) -> bool:
        """Check if current token matches any of the expected tokens"""
        # Handle >> as > in template contexts
        if "GT" in expected_tokens and self.current_token == "RSHIFT":
            return True
        if self.current_token in expected_tokens:
            return True
        return False
    
    def expect(self, expected_token: str) -> str:
        """Expect a specific token and advance, or raise error"""
        # Handle >> as two > tokens in template contexts
        if expected_token == "GT":
            self.split_rshift_if_needed()
        
        if self.current_token != expected_token:
            self.error(f"Expected '{expected_token}', got '{self.current_token}'")
        token = self.current_token
        self.advance()
        return token
    
    def expect_literal_value(self, expected_token: str) -> str:
        """Expect a literal token and return its actual value"""
        if self.current_token != expected_token:
            raise ParseError(f"Expected '{expected_token}', got '{self.current_token}'", self.line, self.col)
        
        # Extract actual value from token position
        value = self.get_literal_value(self.current)
        self.advance()
        return value
    
    def get_literal_value(self, token_pos: int) -> str:
        """Extract the actual literal value from the source code"""
        # This is a simplified approach that parses literals from the source
        from flexer3 import token_list
        
        # For data{32} parsing, we know we're looking for the number inside braces
        if token_pos < len(token_list) and self.tokens[token_pos] == "INT_LITERAL":
            # Find all numbers in source and map by position
            import re
            
            # Look for the specific pattern of numbers in data{} declarations
            data_pattern = r'data\s*\{\s*(\d+)\s*\}'
            data_matches = re.findall(data_pattern, self.source_code)
            
            # Also find standalone numbers
            number_pattern = r'\b(\d+)\b'
            all_numbers = re.findall(number_pattern, self.source_code)
            
            # For data type parsing, return the first data{} number found
            if data_matches:
                return data_matches[0]
            elif all_numbers:
                # Return first number found (fallback)
                return all_numbers[0]
                
        return "0"
    
    def consume(self, expected_token: str) -> bool:
        """Consume token if it matches, return True if consumed"""
        # Handle >> as two > tokens in template contexts
        if expected_token == "GT":
            self.split_rshift_if_needed()
        
        if self.current_token == expected_token:
            self.advance()
            return True
        return False
    
    def handle_rshift_in_templates(self):
        """Handle >> tokens in template contexts by splitting them into two > tokens"""
        if self.current_token == "RSHIFT":
            # Split RSHIFT into two GT tokens
            self.tokens[self.current] = "GT"
            self.tokens.insert(self.current + 1, "GT")
            # Adjust token positions if available
            if self.current < len(self.token_positions):
                current_pos = self.token_positions[self.current]
                self.token_positions.insert(self.current + 1, current_pos)
            self.current_token = "GT"
    
    def at_end(self) -> bool:
        """Check if we're at the end of tokens"""
        return self.current_token == "== END OF FILE ==" or \
               self.current_token == "EOF" or \
               self.current >= len(self.tokens) - 1
    
    def is_template_instantiation_lookahead(self) -> bool:
        """
        Look ahead to determine if '<' starts a template instantiation.
        This looks for the pattern: < type_list > where type_list is comma-separated types.
        """
        if not self.match("LT"):
            return False
        
        # Save current position
        saved_pos = self.current
        saved_token = self.current_token
        self.in_lookahead = True
        
        try:
            self.advance()  # consume LT
            
            # Try to parse type list
            if not self.is_type_specifier():
                return False
            
            # Parse first type
            self.parse_type_spec()
            
            # Handle comma-separated types
            while self.consume("DELIM_COMMA"):
                if not self.is_type_specifier():
                    return False
                self.parse_type_spec()
            
            # Should end with GT
            result = self.match("GT")
            return result
            
        except:
            return False
        finally:
            # Always restore position and clear lookahead flag
            self.current = saved_pos
            self.current_token = saved_token
            self.in_lookahead = False

    def is_template_call_lookahead(self) -> bool:
        """
        Look ahead to determine if this is a template call with : syntax
        Pattern: identifier < type_list > [( args )] : expression
        The function call part is optional
        """
        if not (self.current_token.startswith("IDENTIFIER_") and self.peek(1) == "LT"):
            return False
            
        # Save current position
        saved_pos = self.current
        saved_token = self.current_token
        self.in_lookahead = True
        
        try:
            self.advance()  # consume identifier
            self.advance()  # consume LT
            
            # Try to parse type list
            if not self.is_type_specifier():
                return False
            
            # Parse first type
            self.parse_type_spec()
            
            # Handle comma-separated types
            while self.consume("DELIM_COMMA"):
                if not self.is_type_specifier():
                    return False
                self.parse_type_spec()
            
            # Should end with GT
            if not self.match("GT"):
                return False
            self.advance()  # consume GT
            
            # FIXED: Handle optional function call syntax
            if self.match("DELIM_L_PARENTHESIS"):
                self.advance()  # consume (
                # Skip over arguments - we don't need to parse them precisely for lookahead
                paren_count = 1
                while paren_count > 0 and not self.at_end():
                    if self.match("DELIM_L_PARENTHESIS"):
                        paren_count += 1
                    elif self.match("DELIM_R_PARENTHESIS"):
                        paren_count -= 1
                    self.advance()
            
            # Check if followed by colon (template call syntax)
            return self.match("DELIM_COLON")
            
        except:
            return False
        finally:
            # Always restore position and clear lookahead flag
            self.current = saved_pos
            self.current_token = saved_token
            self.in_lookahead = False
    
    # Main parsing entry point
    def parse(self) -> ProgramNode:
        """Parse the entire program"""
        print("Beginning parse phase...")
        global_items = []
        
        while not self.at_end():
            item = self.parse_global_item()
            if item:
                global_items.append(item)
        
        print("Parse phase completed.")
        return ProgramNode(global_items, self.line, self.col)
    
    def parse_global_item(self) -> Optional[GlobalItemNode]:
            """Parse a global item"""
            if self.match("KW_IMPORT"):
                return self.parse_import_stmt()
            elif self.match("KW_USING"):
                return self.parse_using_stmt()
            elif self.match("KW_NAMESPACE"):
                return self.parse_namespace_def()
            elif self.match("KW_DEF"):
                return self.parse_function_def()
            elif self.match("KW_OBJECT") and self.peek(1) == "KW_TEMPLATE":
                # FIXED: Handle object templates
                return self.parse_object_template(is_volatile=False)
            elif self.match("KW_OBJECT"):
                return self.parse_object_def()
            elif self.match("KW_STRUCT") and self.peek(1) == "KW_TEMPLATE":
                return self.parse_struct_template(is_volatile=False)
            elif self.match("KW_STRUCT"):
                return self.parse_struct_def()
            elif self.match("KW_TEMPLATE"):
                return self.parse_template_def()
            elif self.match("KW_VOLATILE"):
                # Check if this is a volatile template or volatile variable declaration
                next_token = self.peek(1)
                if (next_token == "KW_TEMPLATE" or 
                    next_token == "KW_ASYNC" or 
                    next_token == "KW_OPERATOR" or
                    next_token == "KW_FOR" or
                    next_token == "KW_SWITCH" or
                    next_token == "KW_OBJECT" or
                    next_token == "KW_STRUCT"):
                    # It's a template definition - parse_template_def handles volatile internally
                    return self.parse_template_def()
                else:
                    # It's a variable declaration with volatile qualifier
                    var_decl = self.parse_variable_decl()
                    self.expect("DELIM_SEMICOLON")
                    return var_decl
            elif self.match("KW_SWITCH") and self.peek(1) == "KW_TEMPLATE":
                return self.parse_switch_template()
            elif self.match("KW_SWITCH"):
                return self.parse_switch_stmt()
            elif self.match("KW_ASYNC"):
                return self.parse_template_def()
            elif self.match("KW_OPERATOR"):
                if self.peek(1) == "KW_TEMPLATE":
                    return self.parse_template_def()  # parse_template_def handles operator templates
                else:
                    return self.parse_operator_def()
            elif self.match("KW_FOR") and self.peek(1) == "KW_TEMPLATE":
                return self.parse_template_def()  # parse_template_def handles for templates
            else:
                # Try parsing as variable declaration
                if self.is_type_specifier():
                    var_decl = self.parse_variable_decl()
                    self.expect("DELIM_SEMICOLON")
                    return var_decl
                else:
                    self.error(f"Unexpected token in global scope: {self.current_token}")
    
    def parse_import_stmt(self) -> ImportStmtNode:
        """Parse import statement"""
        self.expect("KW_IMPORT")
        module_path = self.expect("STRING_LITERAL")
        
        alias = None
        if self.consume("KW_AS"):
            alias = self.expect_identifier()
        
        self.expect("DELIM_SEMICOLON")
        return ImportStmtNode(module_path, alias, self.line, self.col)
    
    def parse_using_stmt(self) -> UsingStmtNode:
        """Parse using statement"""
        self.expect("KW_USING")
        using_list = self.parse_using_list()
        self.expect("DELIM_SEMICOLON")
        return UsingStmtNode(using_list, self.line, self.col)
    
    def parse_using_list(self) -> List[NamespaceAccessNode]:
        """Parse comma-separated list of namespace accesses"""
        using_list = [self.parse_namespace_access()]
        
        while self.consume("DELIM_COMMA"):
            using_list.append(self.parse_namespace_access())
        
        return using_list
    
    def parse_namespace_access(self) -> NamespaceAccessNode:
        """Parse namespace access (e.g., std::io)"""
        identifiers = [self.expect_identifier()]
        
        while self.consume("DELIM_SCOPE"):
            identifiers.append(self.expect_identifier())
        
        return NamespaceAccessNode(identifiers, self.line, self.col)
    
    def parse_namespace_def(self) -> NamespaceDefNode:
        """Parse namespace definition"""
        self.expect("KW_NAMESPACE")
        name = self.expect_identifier()
        self.expect("DELIM_L_BRACE")
        
        body = []
        while not self.match("DELIM_R_BRACE") and not self.at_end():
            # Handle both regular objects and object templates in namespaces
            if self.match("KW_OBJECT"):
                if self.peek(1) == "KW_TEMPLATE":
                    # Object template
                    obj_template = self.parse_object_template(False)
                    body.append(obj_template)
                else:
                    # Regular object
                    obj_def = self.parse_object_def()
                    if obj_def:
                        body.append(obj_def)
            else:
                self.error(f"Expected object definition in namespace, got {self.current_token}")
        
        self.expect("DELIM_R_BRACE")
        self.expect("DELIM_SEMICOLON")
        return NamespaceDefNode(name, body, self.line, self.col)
    
    def parse_function_def(self) -> FunctionDefNode:
        """Parse function definition"""
        self.expect("KW_DEF")
        name = self.expect_identifier()
        self.expect("DELIM_L_PARENTHESIS")
        
        parameters = []
        if not self.match("DELIM_R_PARENTHESIS"):
            parameters = self.parse_parameter_list()
        
        self.expect("DELIM_R_PARENTHESIS")
        self.expect("RETURN_ARROW")
        return_type = self.parse_type_spec()
        self.expect("DELIM_L_BRACE")
        
        body = self.parse_statement_list()
        
        self.expect("DELIM_R_BRACE")
        self.expect("DELIM_SEMICOLON")
        
        return FunctionDefNode(name, parameters, return_type, body, self.line, self.col)
    
    def parse_parameter_list(self) -> List[ParameterNode]:
        """Parse function parameter list"""
        parameters = [self.parse_parameter()]
        
        while self.consume("DELIM_COMMA"):
            parameters.append(self.parse_parameter())
        
        return parameters
    
    def parse_parameter(self) -> ParameterNode:
        """Parse function parameter"""
        type_spec = self.parse_type_spec()
        name = self.expect_identifier()
        return ParameterNode(type_spec, name, self.line, self.col)
    
    def parse_object_def(self) -> ObjectDefNode:
        """Parse object definition"""
        self.expect("KW_OBJECT")
        name = self.expect_identifier()
        
        # Check for forward declaration
        if self.consume("DELIM_SEMICOLON"):
            return ObjectDefNode(name, None, None, True, self.line, self.col)
        
        inheritance = None
        if self.consume("DELIM_COLON"):
            inheritance = self.parse_inheritance()
        
        self.expect("DELIM_L_BRACE")
        body = []
        
        while not self.match("DELIM_R_BRACE") and not self.at_end():
            if self.match("KW_OBJECT"):
                # Handle nested object - parse it but store as a special object member
                nested_obj = self.parse_nested_object_member()
                if nested_obj:
                    body.append(nested_obj)
            else:
                member = self.parse_object_member()
                if member:
                    body.append(member)
        
        self.expect("DELIM_R_BRACE")
        self.expect("DELIM_SEMICOLON")
        
        return ObjectDefNode(name, inheritance, body, False, self.line, self.col)
    
    def parse_nested_object_member(self) -> ObjectMemberNode:
        """Parse nested object as an object member (workaround for AST limitation)"""
        # Parse the nested object
        nested_obj = self.parse_nested_object_def()
        
        # Create a wrapper that makes it compatible with ObjectMemberNode
        # For now, we'll create a variable declaration that represents the nested object
        # This is a workaround - ideally the AST should support nested objects directly
        object_type = BaseTypeNode(nested_obj.name, None, self.line, self.col)
        var_init = VariableInitNode(nested_obj.name.lower() + "_nested", None, None, self.line, self.col)
        return VariableDeclNode(object_type, [var_init], False, None, None, None, self.line, self.col)
    
    def parse_nested_object_def(self) -> ObjectDefNode:
        """Parse nested object definition (same as regular object but doesn't expect to be at global scope)"""
        self.expect("KW_OBJECT")
        name = self.expect_identifier()
        
        inheritance = None
        if self.consume("DELIM_COLON"):
            inheritance = self.parse_inheritance()
        
        self.expect("DELIM_L_BRACE")
        body = []
        
        while not self.match("DELIM_R_BRACE") and not self.at_end():
            member = self.parse_object_member()
            if member:
                body.append(member)
        
        self.expect("DELIM_R_BRACE")
        self.expect("DELIM_SEMICOLON")
        
        return ObjectDefNode(name, inheritance, body, False, self.line, self.col)
    
    def parse_inheritance(self) -> InheritanceNode:
        """Parse inheritance specification"""
        inheritance_list = [self.parse_inheritance_item()]
        
        while self.consume("DELIM_COMMA"):
            inheritance_list.append(self.parse_inheritance_item())
        
        return InheritanceNode(inheritance_list, self.line, self.col)
    
    def parse_inheritance_item(self) -> InheritanceItemNode:
        """Parse single inheritance item - FIXED to handle qualified names"""
        is_excluded = self.consume("NOT")
        
        # Handle qualified names (e.g., SystemCore::BaseSystem)
        name_parts = [self.expect_identifier()]
        
        while self.consume("DELIM_SCOPE"):
            name_parts.append(self.expect_identifier())
        
        # Join the parts to form the full qualified name
        full_name = "::".join(name_parts)
        
        return InheritanceItemNode(full_name, is_excluded, self.line, self.col)
    
    def parse_object_member(self) -> Optional[ObjectMemberNode]:
        """Parse object member (variable, method, template, or nested object)"""
        if self.match("KW_DEF"):
            return self.parse_method_def()
        elif self.match("KW_OBJECT"):
            # Handle nested objects (both regular and template)
            return self.parse_nested_object_def()
        elif self.match("KW_ASYNC") and self.peek(1) == "KW_TEMPLATE":
            # FIXED: Handle async template methods within objects
            return self.parse_async_template_in_object()
        elif self.match("KW_TEMPLATE"):
            # This is a function template within the object, not an object template
            # Handle template methods within objects
            return self.parse_function_template_in_object()
        elif self.match("KW_VOLATILE") and self.peek(1) == "KW_TEMPLATE":
            # Handle volatile template methods within objects
            is_volatile = True
            self.advance()  # consume KW_VOLATILE
            return self.parse_function_template_in_object(is_volatile)
        elif self.match("KW_VOLATILE") and self.peek(1) == "KW_ASYNC" and self.peek(2) == "KW_TEMPLATE":
            # Handle volatile async template methods within objects
            is_volatile = True
            self.advance()  # consume KW_VOLATILE
            return self.parse_async_template_in_object(is_volatile)
        elif self.is_type_specifier():
            var_decl = self.parse_variable_decl()
            self.expect("DELIM_SEMICOLON")
            return var_decl
        else:
            self.error(f"Expected object member, got {self.current_token}")
